Apache Tez Change Log
=====================

Release 0.6.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2168. Fix application dependencies on mutually exclusive artifacts: tez-yarn-timeline-history
    and tez-yarn-timeline-history-with-acls.
  TEZ-2190. TestOrderedWordCount fails when generateSplitsInClient set to true.
  TEZ-2091. Add support for hosting TEZ_UI with nodejs.
  TEZ-2165. Tez UI: DAG shows running status if killed by RM in some cases.
  TEZ-2158. TEZ UI: Display dag/vertex names, and task/attempt index in breadcrumb.
  TEZ-2160. Tez UI: App tracking URL should support navigation back.
  TEZ-2147. Swimlanes: Improved tooltip
  TEZ-2142. TEZ UI: Breadcrumb border color looks out of place in wrapped mode.
  TEZ-2134. TEZ UI: On request failure, display request URL and server name in error bar.
  TEZ-2136. Some enhancements to the new Tez UI.
  TEZ-2135. ACL checks handled incorrectly in AMWebController.
  TEZ-1990. Tez UI: DAG details page shows Nan for end time when a DAG is running.
  TEZ-2116. Tez UI: dags page filter does not work if more than one filter is specified.
  TEZ-2106. TEZ UI: Display data load time, and add a refresh button for items that can be refreshed.
  TEZ-2114. Tez UI: task/task attempt status is not available when its running.
  TEZ-2112. Tez UI: fix offset calculation, add home button to breadcrumbs.
  TEZ-2038. TEZ-UI DAG is always running in tez-ui when the app is failed but no DAGFinishedEvent is logged.
  TEZ-2102. Tez UI: DAG view has hidden edges, dragging DAG by holding vertex causes unintended click.
  TEZ-2101. Tez UI: Issues on displaying a table.
  TEZ-2092. Tez UI history url handler injects spurious trailing slash.
  TEZ-2098. Tez UI: Dag details should be the default page for dag, fix invalid time entries for failed Vertices.
  TEZ-2024. TaskFinishedEvent may not be logged in recovery.
  TEZ-2031. Tez UI: horizontal scrollbars do not appear in tables, causing them to look truncated. 